<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.paulina.login.LoginFragment">

    <data>
        <variable
            name="myLoginViewModel"
            type="com.example.paulina.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/fondo"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="290dp"
            android:layout_height="70dp"
            android:fontFamily="@font/new_rocker"
            android:text="@string/Bienvenida"
            android:textColor="#FFF"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.098" />

        <EditText
            android:id="@+id/userNameTextField"
            android:layout_width="247dp"
            android:layout_height="55dp"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/User"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#fff"
            android:text="@={myLoginViewModel.inputUsername}"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".40"  />

        <EditText
            android:id="@+id/passwordTextField"
            android:layout_width="247dp"
            android:layout_height="55dp"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/psw"
            android:textColor="#fff"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.550"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text="@={myLoginViewModel.inputPassword}"
            tools:layout_editor_absoluteY="312dp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#fff"
            android:fontFamily="@font/acme"
            android:onClick="@{()->myLoginViewModel.loginButton()}"
            android:text="@string/btnIniciar"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.72" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>